Add Machine Power Lifecycle APIs (#103)
Adds APIs to allow individual servers in a cluster to be soft/hard rebooted, shutdown and restarted.
